--- a/firebase.json
+++ b/firebase.json
@@ -1,5 +1,15 @@
 {
   "database": {
-    "rules": "n"
+    "rules": "firebase_rules.json"
+  },
+  "hosting": {
+    "public": "build",
+    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
   }
 }
