--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "bootstrap": "^5.2.3",
     "env-cmd": "^10.1.0",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.0",
     "styled-components": "^5.3.6",
+    "unsplash-js": "^7.0.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
