--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "^1.2.0",
     "bootstrap": "^5.2.3",
     "env-cmd": "^10.1.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-autosuggest": "^10.1.0",
     "react-bootstrap": "^2.6.0",
@@ -15,6 +16,7 @@
     "react-dropzone": "^14.2.3",
     "react-scripts": "5.0.1",
     "react-tabs": "^6.0.0",
+    "react-toast": "^1.0.3",
     "styled-components": "^5.3.6",
     "unsplash-js": "^7.0.15",
     "web-vitals": "^2.1.4"
